crates/etas_tests/fixtures/compiler/handlers/negative/finish_outside_handler.es
module tests.compiler.handlers.negative.finish_outside_handler;

flow main(args: Array<string>) -> i32 ![]
{
    finish 1;
}
